--- a/src/com/config/config.properties
+++ b/src/com/config/config.properties
@@ -1,4 +1,4 @@
 ## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa
-#Thu Jul 26 08:36:57 EDT 2018
+#Fri Aug 03 14:18:26 EDT 2018
 browser=Chrome
-env=elevators               8085
+env=electrical               8085
