--- a/src/com/config/config.properties
+++ b/src/com/config/config.properties
@@ -1,4 +1,4 @@
 ## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa
-#Fri Aug 03 14:18:26 EDT 2018
+#Fri Aug 03 15:12:29 EDT 2018
 browser=Chrome
-env=electrical               8085
+env=elevators      8085
