--- a/src/com/config/job_number.properties
+++ b/src/com/config/job_number.properties
@@ -1,6 +1,6 @@
 ## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa
-#Fri Aug 03 15:16:21 EDT 2018
+#Mon Aug 06 14:29:44 EDT 2018
 tracking_number=427772061
-job_number=M00023314
+job_number=B00023418
 ahv_number=B00330808
 ewn_number=EWN-M-00022731
