--- a/src/com/config/config.properties
+++ b/src/com/config/config.properties
@@ -1,4 +1,4 @@
 ## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa
-#Thu Aug 16 10:33:29 EDT 2018
+#Mon Aug 27 11:12:31 EDT 2018
 browser=Chrome
-env=antenna      8085
+env=elevators 8085
