Config changes as of 11/16/2018
Config changes as of 11/16/2018 includes the .properties files. These enable the tests to run in TESTING and STAGING environments.

--- a/src/com/config/config.properties
+++ b/src/com/config/config.properties
@@ -1,4 +1,4 @@
 ## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa
-#Mon Aug 27 11:12:31 EDT 2018
+#Mon Oct 29 13:08:43 EDT 2018
 browser=Chrome
-env=elevators 8085
+env=antenna 8085
