--- a/src/com/config/job_number.properties
+++ b/src/com/config/job_number.properties
@@ -1,6 +1,5 @@
 ## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa
-#Mon Aug 27 11:46:10 EDT 2018
-tracking_number=427772061
-job_number=M00024038
-ahv_number=B00330808
-ewn_number=EWN-M-00022731
+#Fri Nov 16 10:56:19 EST 2018
+job_number=M00025669
+ahv_number=M7118995
+ewn_number=EWN-M-00025178
