latest config files as of 2018-12-21
latest config files as of 2018-12-21 - text.properties

--- a/src/com/config/text.properties
+++ b/src/com/config/text.properties
@@ -6,6 +6,7 @@ filing_message_el=The filing has been successfully submitted to DOB.
 inspection_requirements_added=Inspection Requirement details added successfully.
 inspection_requirements_updated=Inspection Requirement details updated successfully.
 tr_updated=Inspection Requirement details updated successfully.
+tr_saved_success=Technical Report Saved successfully.
 work_permit_saved=Work permit saved successfully.
 work_permit_renewed=Permit renewed successfully.
 minor_work_description_added=Minor Work Description added successfully.
