latest config files as of 2018-12-28
latest config files as of 2018-12-28 - job_number, config, text

--- a/src/com/config/config.properties
+++ b/src/com/config/config.properties
@@ -1,4 +1,4 @@
-## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa
+## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa bemsst
 #Mon Oct 29 13:08:43 EDT 2018
 browser=Chrome
-env=antenna 8085
+env=plumbing 8085
