--- a/src/com/config/text.properties
+++ b/src/com/config/text.properties
@@ -34,7 +34,7 @@ applications_created_successfully=Application created successfully. Please add/u
 device_added=Device successfully added. Do you want to proceed updating device details?
 device_saved=Device saved successfully.
 fail=fail
-# BROWSERS::  IE  Chrome  Mozilla # ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4
+# BROWSERS::  IE  Chrome  Mozilla # ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa bemsst
 sow_saved=Scope of Work has been saved
 job_has_been_saved=Job filing has been saved.
 job_has_been_submitted=Job filing has been submitted to DOB
