latest config files as of 2019-01-02
latest config files as of 2019-01-02 - job_number.properties, config.properties

--- a/src/com/config/job_number.properties
+++ b/src/com/config/job_number.properties
@@ -1,5 +1,5 @@
-## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa
-#Fri Dec 28 16:17:29 EST 2018
-job_number=M00027776
+## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa plspsd bemsst
+#Wed Jan 02 15:45:34 EST 2019
+job_number=M00027890
 ahv_number=M7118995
 ewn_number=EWN-M-00025178
