--- a/src/com/config/config.properties
+++ b/src/com/config/config.properties
@@ -1,4 +1,4 @@
-## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa bemsst
-#Mon Oct 29 13:08:43 EDT 2018
+## BROWSERS :: IE  Chrome  ENVIRONMENTS ::  443 444 8085 + WORK TYPES:: antenna curbcut plumbing electrical elevators fab4 laa patpa plspsd bemsst
+#Wed Jan 02 15:04:33 EST 2019
 browser=Chrome
-env=plumbing 8085
+env=antenna 8085
